# tauri-plugin-network-manager

./: Cargo.toml  README.md  build.rs  package.json  test_wifi_scan.rs  tsconfig.json
guest-js/: index.test.ts  index.ts
permissions/: default.toml  vpn_management.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connect_to_wifi.toml  connect_vpn.toml  create_vpn_profile.toml  delete_vpn_profile.toml  delete_wifi_connection.toml  disconnect_from_wifi.toml  disconnect_vpn.toml  get_network_state.toml  get_network_stats.toml  get_saved_wifi_networks.toml  get_wireless_enabled.toml  is_wireless_available.toml  list_vpn_profiles.toml  list_wifi_networks.toml  rescan_wifi.toml  set_wireless_enabled.toml  toggle_network.toml  toggle_network_state.toml  update_vpn_profile.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs  network_manager.rs  network_stats.rs  network_utils.rs  nm_constants.rs  nm_helpers.rs  proxy_traits.rs
