[package]
name = "tauri-plugin-network-manager"
version = "0.1.0"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-network-manager"

[dependencies]
tauri = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zbus = { version = "3.14", features = ["tokio"] }
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
