[package]
name = "tauri-plugin-network-manager"
version = "0.1.0"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-network-manager"
readme = "README.md"
repository = "https://github.com/Vasak-OS/tauri-plugin-network-manager"
license = "GPL-3.0-or-later"
keywords = ["tauri", "plugin", "network", "manager", "systemd"]

[dependencies]
tauri = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zbus = { version = "3.14", features = ["blocking"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
